tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/virtualservice/set_host_header_in_route_and_multi_destination/a/to_b/_test_context/VirtualService.4041677837.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-20468
spec:
  hosts:
  - b
  http:
  - headers:
      request:
        set:
          :authority: route-authority
    route:
    - destination:
        host: b
      headers:
        request:
          set:
            Host: dest-authority
      weight: 50
    - destination:
        host: b
      weight: 50
